--- a/src/components/basics/Checkbox/Checkbox.css
+++ b/src/components/basics/Checkbox/Checkbox.css
@@ -29,7 +29,6 @@
   font-size: 0.875rem;
   line-height: 1.25rem;
   font-weight: 500;
-  color: #374151;
 }
 
 /* Tamaños */
