--- a/src/components/basics/Label/Label.css
+++ b/src/components/basics/Label/Label.css
@@ -1,6 +1,5 @@
 .label {
   display: inline-block;
-  color: #374151;
   transition: color 0.2s ease-in-out;
 }
 
